# Voice-VIdeo-Translator

./: .gitignore  README.md  pyproject.toml
data/: corrected_english_text.txt  raw_portuguese_text.txt
src/: main.py  prepare_text.py  prepare_video.py  settings.py  wave_to_string_module.py
